Use ViewModelBase and AppState

--- a/Frontend/Pages/UsersPage.razor
+++ b/Frontend/Pages/UsersPage.razor
@@ -12,6 +12,8 @@
 
 @inject Frontend.Services.UserApiService UserService1
 @inject NotificationService NotificationService
+@inject AppState AppState
+
 
 
 
