--- a/Frontend/Pages/UsersPage.razor
+++ b/Frontend/Pages/UsersPage.razor
@@ -12,7 +12,6 @@
 
 @inject Frontend.Services.UserApiService UserService1
 @inject NotificationService NotificationService
-@inject AppState AppState
 
 
 
@@ -188,7 +187,7 @@ else
         if (bSuccess)
         {
             if (CurrentUserId == edited.Id)
-                CurrentUserId = null;
+                AppState.SetCurrentUser( null );
             AllUsers.Remove(user);
 
         }
