--- a/Frontend/Layout/MainLayout.razor
+++ b/Frontend/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
-﻿@using Frontend.Services
+﻿@using Frontend.Models
+@using Frontend.Services
 @using Shared.DTOs
 @inherits LayoutComponentBase
 @inject NotificationService NotificationService
@@ -45,6 +46,7 @@
         if (userDto != null)
         {
             AppState.SetCurrentUser(userDto.Id);
+
             Console.WriteLine("Session restored ... ");
 
         }
