--- a/AuthServer/Pages/Login.cshtml
+++ b/AuthServer/Pages/Login.cshtml
@@ -5,8 +5,10 @@
 
 <form method="post">
     <div>
-        <label>User Id</label>
-        <input asp-for="Id" />
+        <label>User</label>
+        <select asp-for="Id" asp-items="Model.Users">
+            <option value="">-- Select User --</option>
+        </select>
     </div>
 
     <div>
